# ros2_smart_template_cpp

./: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py  smart_template_controller_plugin.xml
config/: smart_template.perspective
description/urdf/: smart_template.urdf.xacro  smart_template.xacro
gui/: launch_gui.py
include/smart_template_cpp/: smart_template_controller.hpp  smart_template_node.hpp
scripts/: run_gui.py
smart_template_cpp/: CMakeLists.txt  package.xml  plugin.xml  setup.py
smart_template_cpp/config/: smart_template_controllers.yaml
smart_template_cpp/include/: smart_template_node.hpp
smart_template_cpp/include/smart_template_cpp/: smart_template_node.hpp
smart_template_cpp/launch/: hardware_template.launch.py  robot.launch.py  smart_template.launch.py  virtual_template.launch.py
smart_template_cpp/src/: __init__.py  smart_template_gui.py  smart_template_node.cpp  virtual_template.py  world_pose_listener.py
smart_template_description/rviz/: urdf.rviz
smart_template_description/urdf/: smart_template.ros2_control.xacro  smart_template.urdf.xacro
src/: smart_template_controller.cpp  smart_template_gui.py  smart_template_node.cpp
