<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smart_template_cpp</name>
  <version>0.1.0</version>
  <description>C++ implementation of the Smart Template robot</description>
  <maintainer email="maribernardes@gmail.com">Mariana Bernardes</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>smart_template_interfaces</depend>
  <depend>smart_template_description</depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>controller_manager</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>tinyxml2</depend>

  <depend>galil_driver</depend>
  <depend>realtime_tools</depend>
  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>

  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
  <depend>python3-pyqt5</depend>
  <depend>urdfpy</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>



  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>